...
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text("Vault")
                },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(
                            imageVector = Icons.Default.ChevronLeft,
                            contentDescription = "Go back"
                        )
                    }
                },
                actions = {
                    if (uiState.canDelete) {
                        IconButton(onClick = { viewModel.deleteVault() }) {
                            Icon(Icons.Default.DeleteOutline, contentDescription = "Delete vault")
                        }
                        Spacer(modifier = Modifier.width(4.dp))
                    }
                }
            )
        }
...
            uiState.apply {
                MyTextField(
                    value = vault.name,
                    onValueChange = {
                        viewModel.update(name = it)
                    },
                    hint = "Name",
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                    modifier = Modifier.fillMaxWidth(),
                    trailing = {
                        if (vault.name.isBlank()) {
                            Icon(
                                Icons.Default.PriorityHigh,
...
                )
                MyTextField(
                    value = vault.description,
                    onValueChange = {
                        viewModel.update(description = it)
                    },
                    hint = "Description",
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                    modifier = Modifier.fillMaxWidth(),
                )
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(top = 8.dp)
...
                    Row(verticalAlignment = Alignment.CenterVertically) {
                        MyTextField(
                            value = tag.label,
                            onValueChange = {
                                viewModel.updateTag(i, it)
                            },
                            hint = "Tag",
                            modifier = Modifier.weight(1f),
                            singleLine = true,
                            keyboardOptions = KeyboardOptions(
                                keyboardType = KeyboardType.Password,
                                imeAction = ImeAction.Next
                            ),
...
